feat(refarch): import trivoallan/refarch-skel

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,13 @@
+theme:
+  name: material
+
 site_name: CLoud Architecture Portal
+
+plugins:
+  - awesome-pages
+  - multirepo:
+      cleanup: false
+      repos:
+        - section: refarch-001
+          section_path: reference-architectures
+          import_url: "https://github.com/trivoallan/refarch-skel?edit_uri=/blob/main/&branch=main&extra_imports=['.pages']"
